compiler/tools/fpp-check/test/redef_port_module.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_port_module.fpp: 2.1
module P { }
^
error: redefinition of symbol P
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_port_module.fpp: 1.1
port P
^
